<resources>
    <string name="app_name">Toiler</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_phone_auth">PhoneAuthActivity</string>
    <string name="title_activity_panel">Toiler</string>
    <string name="title_activity_intro_slider">Toiler</string>
    <string name="app_slogan">Use Toiler and make your everyday tasks easier</string>
    <string name="app_slogan_ext">Your best mate Toiler</string>
    <string name="add_worker_btn">Worker Sign Up</string>
    <string name="worker_filter_btn">Search Worker</string>
    <string name="eng_btn">English</string>
    <string name="bd_btn">বাংলা</string>
    <string name="about_bt">About</string>
    <string name="helpline_bt">Helpline</string>
    <string name="copyright_str">Copyright © 2018 App Name</string>
    <string name="title_activity_phone_authentication">PhoneAuthentication</string>
    <string name="phone_number_verification">Toiler needs Your phone number verification before Registration</string>
    <string name="send_code">Send Phone Number</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="verifiy_code_btn_str">Verify Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="title_activity_worker_registration">WorkerRegistration</string>
    <string name="dec_title">Designation</string>
    <string name="area_title">City Name</string>
    <string name="name_string">Name</string>
    <string name="phone_string">Phone (01XXXXXXXXX)</string>
    <string name="phone_with_format_string">01XXXXXXXXX</string>
    <string name="phone_without_format_string">Phone</string>
    <string name="address_string">Street Address</string>
    <string name="area_string">Area</string>
    <string name="password_string">Password</string>
    <string name="password_confirm_string">Confirm Password</string>
    <string name="designation_string">Designation</string>
    <string name="gender_string">Gender</string>
    <string name="description_string">Description of working experience</string>
    <string name="experience_string">Experience</string>
    <string name="post_code_string">Post Code</string>
    <string name="button_string">Submit</string>
    <string name="account_type">Account Type</string>
    <string name="new_password_msg">Enter New Password</string>
    <string name="new_phone_msg">Enter New Phone Number</string>
    <string name="title_activity_worker_grid">WorkerGrid</string>
    <string name="image_select">Select Image</string>
    <string name="progress_dialog_msg">Your Account is creating, it will takes couple of seconds, Please be patient.....</string>
    <string name="progress_dialog_msg_login">Entering into your Account, Please be patient</string>
    <string name="progress_dialog_msg_update">Updating your Account, Please be patient</string>
    <string name="progress_dialog_msg_delete">Deleting your Account, Please be patient</string>
    <string name="progress_dialog_msg_update_phone">Updating your Phone Number, Please be patient</string>
    <string name="electrician_string">Electrician</string>
    <string name="automobile_string">Automobile Mechanic</string>
    <string name="electronics_string">Electronics Mechanic</string>
    <string name="carpenter_string">Carpenter</string>
    <string name="house_painter_string">House Painter</string>
    <string name="fridge_string">AC &amp; Fridge Mechanic</string>
    <string name="plumber_string">Plumber</string>
    <string name="meson_string">Meson</string>
    <string name="locksmith_string">Locksmith</string>
    <string name="iron_smith_string">Ironsmith/Welding</string>
    <string name="gold_smith_string">Goldsmith</string>
    <string name="mobile_technician_string">Mobile Repairer</string>
    <string name="interior_designer_string">Interior Designer</string>
    <string name="photo_grapher_string">Photographer/Graphics Designer</string>
    <string name="waste_cleaner_string">Waste Cleaner/Swiper</string>
    <string name="dish_provider_string">TV Channel Provider</string>
    <string name="isp_provider_string">Internet Service Provider (ISP)</string>
    <string name="beautician_string">Beautician</string>
    <string name="cook_string">Cook</string>
    <string name="umbrella_repair_string">Umbrella Repairer</string>
    <string name="housekeeper_string">Housekeeper</string>
    <string name="baby_sitter_string">Babysitter</string>
    <string name="house_shifter_string">Truck Renter</string>
    <string name="tailors_string">Tailor</string>
    <string name="cobbler_string">Cobbler</string>
    <string name="purohit_string">Purohit</string>
    <string name="kazi_string">Kazi</string>
    <string name="door_technician_string">Door Technician</string>
    <string name="wedding_material_supplier_string">Decoration Material Supplier</string>
    <string name="light_illumination_service_string">Lighting service</string>
    <string name="none_string">None</string>
    <string name="none_gender_string">None</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="trans_other">Other</string>
    <string name="working_exp_none_string">None</string>
    <string name="working_exp_month_string">Month</string>
    <string name="working_exp_year_string">Year</string>
    <string name="title_activity_worker_profile">WorkerProfile</string>
    <string name="worker_name_demo">Maxwell Houston</string>
    <string name="worker_phone_demo">+8801827933335</string>
    <string name="worker_profile_area">Area</string>
    <string name="worker_profile_city">City</string>
    <string name="worker_profile_address">Address</string>
    <string name="worker_name_error">Enter Worker Name !</string>
    <string name="worker_address_error">Enter Worker Address !</string>
    <string name="worker_phone_error">Enter Worker Phone Number !</string>
    <string name="worker_area_error">Enter Worker Area Name</string>
    <string name="worker_cityname_error">Enter Worker City Name</string>
    <string name="worker_password_error">Password is Empty or Not Match !</string>
    <string name="worker_password_match_error">Password is Empty or Not Match !</string>
    <string name="worker_password_length_error">Provide 6 length password</string>
    <string name="experience_range_error">Enter Your Experience !</string>
    <string name="description_error">Write some description of working experience!</string>
    <string name="postcode_error">Enter Your Post Code!</string>
    <string name="phone_post_error">Please provide Correct Phone number and Post Code!</string>
    <string name="post_code_error">Please provide Correct Post Code!</string>
    <string name="image_select_error">Please Select of Your image. to pressing Image button</string>
    <string name="phone_number_dialog_error">Please provide Correct Phone number</string>
    <string name="designation_spinner_error">Select Your Designation</string>
    <string name="gender_spinner_error">Select Your Gender</string>
    <string name="working_exp_spinner_error">Select your working experience day</string>
    <string name="area_worker_list">Area</string>
    <string name="city_worker_list">City</string>
    <string name="title_activity_worker_search">WorkerSearch</string>
    <string name="search_area_txt">Search Area/Post Code/City</string>
    <string name="network_status">No Internet Connection !</string>
    <string name="confirm_txt">Confirm</string>
    <string name="internet_status">You need Internet Connection ! Press "YES" to Activate Internet</string>
    <string name="yes_text_dialog">Yes</string>
    <string name="no_text_dialog">No</string>
    <string name="user_message">Hello Form Toiler</string>
    <string name="title_activity_worker_login">WorkerLogin</string>
    <string name="title_activity_login_profile">LoginProfile</string>
    <string name="worker_login_title">Worker Login</string>
    <string name="worker_phone_hint">Phone Number</string>
    <string name="worker_password_hint">Password</string>
    <string name="worker_login_button">Login</string>
    <string name="worker_register_string">Register</string>
    <string name="exit_string">Press back button 2 times, for exit</string>
    <string name="worker_register_message">Don`t have an Account press Register to join Toiler &amp; work smarter</string>
    <string name="worker_logout">Logout</string>
    <string name="worker_welcome_message">Welcome</string>
    <string name="phone_validate_msg">Enter Valid Phone Number !</string>
    <string name="password_validate_msg">Type correct password !</string>
    <string name="dismiss_btn_text">Ok</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="yes_btn_text">Yes</string>
    <string name="no_btn_text">No</string>
    <string name="message_btn_text">Do You want to update your information ?</string>
    <string name="message_btn_delete_text">Do You want to Delete your information ? You can also Re-Register after delete Your information</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test_map">Map</string>
    <string name="title_activity_worker_registration_easy">WorkerRegistrationEasy</string>
    <string name="title_activity_account_chooser">AccountChooser</string>
    <string name="verified_account_chooser">Open Verified Account</string>
    <string name="easy_account_chooser">Open Easy Account</string>
    <string name="verified_account_instruction"> <b>* </b>Open Verified Account needs Worker phone number verification</string>
    <string name="easy_account_instruction"><b>* </b>Open Easy Account doesn`t need Worker phone number verification</string>
    <string name="title_activity_worker_map">Map</string>
    <string name="designation_map_info">Designation : </string>
    <string name="area_map_info">Area : </string>
    <string name="working_experience_map_info">working Experience : </string>
    <string name="city_map_info">City : </string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_welcome">Welcome to Toiler</string>
    <string name="slide_1_title">Are You Worried !</string>
    <string name="slide_1_desc">Not finding any worker, when you fix something Intensely for family needs</string>
    <string name="slide_2_title">No Tension </string>
    <string name="slide_2_desc">Toiler will help you to find many worker nearby in your area</string>
    <string name="slide_3_title">Fell Free</string>
    <string name="slide_3_desc">The goal of Toiler is, helps you to find proper worker in proper time</string>
    <string name="slide_4_title">Technews</string>
    <string name="slide_4_desc">Read the latest technology news and tech headlines on computer, apps, games, gadgets and other personal tech!</string>
    <string name="main_screen_desc">There are two steps to see the Intro Screen slider.\n\n1. Goto Settings -> apps -> welcome slider -> clear data.\n2. Click the below Play Again button</string>
    <string name="play_again">Play Again</string>
    <string name="comp_name">Enigma Systems</string>
    <string name="developer_string">Application Developer</string>
    <string name="maintainer_string">Application Maintainer</string>
    <string name="comp_copyright">Toiler © Copyright of Enigma Systems</string>
    <string name="comp_maintainer_name">Islam Md Farhan</string>
    <string name="comp_dev_name">Arunav Mallik Avi (Arm Avi)</string>
    <string name="comp_maintainer_social_link"></string>
    <string name="comp_dev_social_link"></string>
    <string name="comp_title">Toiler</string>
    <string name="list_view_error">You need internet connection !</string>
</resources>