<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/enigmalogoedi" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView37"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/comp_name"
                android:textColor="#DD2324"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView45"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/developer_string"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView46"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/comp_dev_name"
                android:textColor="#DD2324"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView47"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/maintainer_string"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView48"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/comp_maintainer_name"
                android:textColor="#DD2324"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView49"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/comp_copyright"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView45"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/comp_title"
                android:textColor="#DD2324"
                android:textSize="25sp" />
        </RelativeLayout>
    </ScrollView>
    </ScrollView>