<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_upper"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.toiler.enigmasystems.Panel"
    tools:showIn="@layout/activity_panel">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/englishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/banglaBtn"
            android:layout_alignBottom="@+id/banglaBtn"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:background="#FFF42F28"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="5dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="5dp"
            android:text="@string/eng_btn"
            android:textColor="#FFEFE9EB" />

        <TextView
            android:id="@+id/banglaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignTop="@+id/imageView6"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="51dp"
            android:background="#FFF42F28"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:text="@string/bd_btn"
            android:textColor="#FFEFE9EB" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="11dp"
            app:srcCompat="@drawable/toilertitlelogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView6"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="11dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/app_slogan"
            android:textColor="#FFF2ECEE"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/back_but">

        <RelativeLayout
            android:id="@+id/search_worker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/worker_filter_btn"
                android:textColor="#FFF2ECEE"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                app:srcCompat="@drawable/spinner_des" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_but">

        <RelativeLayout
            android:id="@+id/add_worker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/add_worker_btn"
                android:textColor="#FFF2ECEE"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                app:srcCompat="@drawable/icon_two" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_but">

        <RelativeLayout
            android:id="@+id/workerLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/worker_login_title"
                android:textColor="#FFF2ECEE"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                app:srcCompat="@drawable/login_ico_worker" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="15dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/helpline_bt"
        android:textColor="#FFF2ECEE"
        android:layout_above="@+id/textView10"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="15dp"
        android:text="@string/copyright_str"
        android:textColor="#FFF2ECEE" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout2"
        android:layout_alignStart="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/app_slogan_ext"
        android:textColor="#FFF2ECEE" />

    <TextView
        android:id="@+id/about"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_toLeftOf="@+id/textView9"
        android:layout_toStartOf="@+id/textView9"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/about_bt"
        android:textColor="#FFF2ECEE" />
</RelativeLayout>
